--- a/firsthome/index.html
+++ b/firsthome/index.html
@@ -1,12 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Static Template</title>
+    <!-- <link rel="stylesheet" href="./src/style.css" /> -->
   </head>
   <body>
+    <!-- <div class="card">
+      <div class="image__container">
+        <img
+          src="https://ultimatecourses.com/assets/share/courses/react-f02200115da09fd485a296e351972d7ea75701ed8d3d023d9f18c4b38e6b18b0.png"
+          alt=""
+        />
+        <div class="level">Beginner</div>
+      </div>
+      <h3 class="card__title">Introduction Basic Programming HTML & CSS</h3>
+
+      <div class="card__info">
+        <div class="user">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/User-avatar.svg/2048px-User-avatar.svg.png"
+            alt="John Doe"
+          />
+          <p>John Doe</p>
+        </div>
+        <div class="rating">
+          <p>4.5</p>
+        </div>
+      </div>
+
+       Якщо це карточка, яка відображає мої поточні курси -->
+      <!-- <div>
+        <progress value="50" max="100">
+          50%
+        </progress>
+        <div class="card__info">
+          <p>5 / 10 Modules</p>
+          <div>50 %</div>
+        </div>
+      </div> -->
+
+      <!-- <div class="card__info">
+        <div>1234 Student</div>
+        <div>5 Modules</div>
+        <div>1h 30m</div>
+      </div>
+    </div> --> 
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
